--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body {
 
 .wrapper {
   max-width: 1080px;
-  margin: auto; }
+  margin: auto;
+  //padding: 0 15px; }
 
 header {
   height: 80px;
@@ -181,3 +182,38 @@ footer {
         text-decoration: none;
         margin-bottom: 10px;
         color: white; }
+
+
+@media (max-width: 994px) {
+  .services .service-boxes .box {
+    width: 48%;
+  }
+}
+@media (max-width: 768px) {
+  header .navbar {
+    display: none;
+  }
+  .services .service-boxes .box {
+    width: 96%;
+    float: none;
+    margin: 1% 2%;
+  }
+  .tutorials .tuts-text {
+    width: 100%;
+    text-align: center;
+  }
+  .tutorials .tuts-text p {
+      width: 100%;
+  }
+  .contact .contact-body .fields-box {
+    width: 100%;
+    float: none;
+    margin: 2%;
+  }
+  .contact .contact-body .textarea-box {
+    width: 96%;
+    float: none;
+    margin: 2%;
+  }
+
+}
